src/pages/anki/components/MainSearch/index.less
@import '~antd/es/style/themes/default.less';

.wrapper {
  margin: 20px 66px 40px;
}

.search {
  :global {
    .ant-input {
      padding: 6px 14px;
      border: 0;
      border-radius: 17px;
      &:focus {
        box-shadow: none;
      }
    }

    .ant-input-group {
      border-radius: 17px;
      .ant-input-group-addon {
        background: transparent;
        .ant-btn {
          height: 34px;
          border-top-right-radius: 17px;
          border-bottom-right-radius: 17px;
        }
      }

      &:focus-within {
        box-shadow: 0 0 0 2px fade(@primary-color, @outline-fade);
      }
    }
  }
}

